src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
* {
    margin: 0;
    padding: 0;
    outline: 0;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
}
:root {
    --red:#FF002B;
    --blue-dark: #0C121C;
    --blue: #1E293B;
    --mid: #B8BFC6;
    --light: #ffffff;
}

body {
    background-color: var(--blue-dark);
}

input {
    background: transparent;
    border: none;
    padding-bottom: 0;
    font-size: 20px;
    border-radius: 0;
    border-bottom: 1px solid #ff002b;
}

